# imparando

./: .gitignore  Cargo.toml  Dockerfile.bundle  README.md
.github/workflows/: bundle.yml  release.yml
docs/plans/: 2026-03-03-vm-manager-design.md
prompts/: github-auth.md  postgres-start.md
scripts/: build-rootfs.sh  download-kernel.sh  download-ttyd.sh  install-bundle.sh
src/: config.rs  main.rs  profiles.rs  prompts.rs
src/api/: auth.rs  mod.rs  sessions.rs  terminal.rs
src/ui/: index.html
src/vm/: firecracker.rs  github.rs  mod.rs  network.rs  overlay.rs  proxy.rs
systemd/: imparando.service
